# ini_manager

./: .clang-format  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  HACKING.md  README.md  annotated.html  classes.html  concepts.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a9a17f5b100323ce4f2aecace40cd5d5.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  spell-targets.cmake  variables.cmake
d0/d4e/: conceptini_1_1ini__manager_1_1StreamExtractable.html
d0/dd5/: structini_1_1key__coll__graph.dot  structini_1_1key__coll__graph.map  structini_1_1key__coll__graph.md5
d2/d16/: classini_1_1ini__manager_1_1const__section__accessor-members.html
d2/d24/: structini_1_1section__coll__graph.dot  structini_1_1section__coll__graph.map  structini_1_1section__coll__graph.md5
d4/d05/: classini_1_1ini__manager.html  classini_1_1ini__manager_a11d6b90b20a81d65e294473e9825bbb7_cgraph.dot  classini_1_1ini__manager_a11d6b90b20a81d65e294473e9825bbb7_cgraph.map  classini_1_1ini__manager_a11d6b90b20a81d65e294473e9825bbb7_cgraph.md5  classini_1_1ini__manager_a2c2bca7b39a8e4454fc3e885bedd9687_cgraph.dot  classini_1_1ini__manager_a2c2bca7b39a8e4454fc3e885bedd9687_cgraph.map  classini_1_1ini__manager_a2c2bca7b39a8e4454fc3e885bedd9687_cgraph.md5  classini_1_1ini__manager_a39558157153c6c8322cf8745b70fdee5_cgraph.map  classini_1_1ini__manager_a39558157153c6c8322cf8745b70fdee5_cgraph.md5  classini_1_1ini__manager_a41ed3e4d7b34985580e9eba4e802cac5_cgraph.dot  classini_1_1ini__manager_a41ed3e4d7b34985580e9eba4e802cac5_cgraph.map  classini_1_1ini__manager_a41ed3e4d7b34985580e9eba4e802cac5_cgraph.md5  classini_1_1ini__manager_a4316766a2c3029d10134eaf8e26f0774_cgraph.dot  classini_1_1ini__manager_a4316766a2c3029d10134eaf8e26f0774_cgraph.map  classini_1_1ini__manager_a4316766a2c3029d10134eaf8e26f0774_cgraph.md5  classini_1_1ini__manager_a5b9d25a0d7860fe2f089b2347268d4a3_icgraph.dot  classini_1_1ini__manager_a5b9d25a0d7860fe2f089b2347268d4a3_icgraph.map  classini_1_1ini__manager_a5b9d25a0d7860fe2f089b2347268d4a3_icgraph.md5  classini_1_1ini__manager_a77d7ebfc1e2321c3aefb1cd23b607a08_cgraph.map  classini_1_1ini__manager_a77d7ebfc1e2321c3aefb1cd23b607a08_cgraph.md5  classini_1_1ini__manager_a87fcd332ea821ea96964f728ac1e5b66_cgraph.dot  classini_1_1ini__manager_a87fcd332ea821ea96964f728ac1e5b66_cgraph.map  classini_1_1ini__manager_a87fcd332ea821ea96964f728ac1e5b66_cgraph.md5  classini_1_1ini__manager_aaf3add41f5daa73e6e681cbe3b984590_cgraph.map  classini_1_1ini__manager_aaf3add41f5daa73e6e681cbe3b984590_cgraph.md5  classini_1_1ini__manager_ac88f0d28eb415b59bf7dff771222df0e_cgraph.dot  classini_1_1ini__manager_ac88f0d28eb415b59bf7dff771222df0e_cgraph.map  classini_1_1ini__manager_ac88f0d28eb415b59bf7dff771222df0e_cgraph.md5  classini_1_1ini__manager_aca4af2c4664494f85dc17c67adef735c_cgraph.dot  classini_1_1ini__manager_aca4af2c4664494f85dc17c67adef735c_cgraph.map  (+10 more)
docs/: Doxyfile.in
example/: 1_empty_example.cpp  2_path_example.cpp  3_stream_example.cpp  4_load_file_example.cpp  5_add_from_stream_example.cpp  6_load_stream_example.cpp  7_add_from_file_example.cpp  8_operator_example.cpp  CMakeLists.txt  empty_example.cpp  load_example.cpp  path_example.cpp  stream_example.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+13 more)
test/: CMakeLists.txt
test/source/: ini_manager_test.cpp
(+30 files in other folders)
